index modificado y sitemap agregado

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="keywords"  content="DISEÑO UX y UI, WEB, MOVIL, APP, MARCA, DISEÑO GRAFICO, DISEÑO WEB, DISEÑO VISUAL, USABILIDAD, EXPERIENCIA DE USUARIO, EXPERIENCIAS DIGITALES">
     <!--DESCRIPCION-->
     <meta name="description" content="Agencia de diseño UX y UI. Diseño de interfaces web y móvil, apps. Especialistas en usabilidad y experiencia de usuario → ¡Te podemos Ayudar!">
+    <meta name="google-site-verification" content="SQUjom3vJ4QkXs41FiqadVA7AW6wG_iNWfpSzBJLAtc" />
   </head>
 
   <body>
