modificado style.scss / style.css -- agregado pageError.html

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <a href="" class="me-4 text-reset linkedin">
                 <i class="fab fa-linkedin"></i>
               </a>
-              <a href="" class="me-4 text-reset github">
+              <a href="./paginas/pageError.html" class="me-4 text-reset github">
                 <i class="fab fa-github"></i>
               </a>
           </div>
