incorporacion de link a pageError

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               <a href="https://www.instagram.com/rc_aboutyou/" class="me-4 text-reset instagram">
                 <i class="fab fa-instagram"></i>
               </a>
-              <a href="" class="me-4 text-reset linkedin">
+              <a href="./paginas/pageError.html" class="me-4 text-reset linkedin">
                 <i class="fab fa-linkedin"></i>
               </a>
               <a href="./paginas/pageError.html" class="me-4 text-reset github">
