--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -178,10 +178,10 @@
                       <a href="https://www.instagram.com/rc_aboutyou/" class="me-4 text-reset">
                         <i class="fab fa-instagram"></i>
                       </a>
-                      <a href="" class="me-4 text-reset">
+                      <a href="./pageError.html" class="me-4 text-reset">
                         <i class="fab fa-linkedin"></i>
                       </a>
-                      <a href="" class="me-4 text-reset">
+                      <a href="./pageError.html" class="me-4 text-reset">
                         <i class="fab fa-github"></i>
                       </a>
                   </div>
